Removes console.logs and fixes layout issues in mobile

--- a/src/css/PostLayout.module.css
+++ b/src/css/PostLayout.module.css
@@ -63,7 +63,7 @@
 .disqus {
   margin: 0 auto;
   margin-top: 10rem;
-  width: 70%;
+  width: 60%;
 }
 
 @media only screen and (max-width: 600px) {
