--- a/src/css/Posts.module.css
+++ b/src/css/Posts.module.css
@@ -85,10 +85,13 @@
   color: #dc143c;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .featuredContainer {
     padding: 20vh 10vw;
     margin-bottom: 0;
+  }
+  .featuredContainer h2 {
+    font-size: 2rem;
   }
   .container {
     padding: 1rem 0.5rem 0 0.5rem;
